--- a/src/main/resources/com/frandm/pomodoro/styles.css
+++ b/src/main/resources/com/frandm/pomodoro/styles.css
@@ -8,7 +8,7 @@
 /* --- labels --- */
 .timer-label {
     -fx-font-family: "JetBrains Mono", "Monospaced";
-    -fx-font-size: 100px;
+    -fx-font-size: 120px;
     -fx-font-weight: bold;
     -fx-text-fill: -text-main;
     -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 0, 0, 0, 4);
@@ -19,7 +19,7 @@
     -fx-border-color: -text-muted;
     -fx-border-radius: 12;
     -fx-padding: 2 10;
-    -fx-font-size: 10px;
+    -fx-font-size: 14px;
     -fx-text-fill: -text-muted;
     -fx-opacity: 0.8;
     -fx-cursor: hand;
@@ -152,13 +152,15 @@
 .cell-extreme { -fx-fill: -heatmap-extreme; }
 
 .tooltip {
-    -fx-background-color: -color-menu;
-    -fx-background-radius: 8;
-    -fx-border-color: -text-muted;
-    -fx-border-radius: 8;
+    -fx-background-color: -bg-panels;
+    -fx-background-radius: 10;
+    -fx-text-fill: -color-border;
+    -fx-font-size: 15px;
     -fx-padding: 8 12;
-    -fx-text-fill: -text-main;
-    -fx-font-size: 13px;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.5), 10, 0, 0, 4);
+    -fx-border-color: -color-border;
+    -fx-border-radius: 10;
+    -fx-border-width: 1;
 }
 
 .stat-cardbasic {
@@ -773,4 +775,24 @@
 
 .corner {
     -fx-background-color: transparent;
+}
+
+.menu-icon {
+    -fx-icon-size: 50px;
+    -fx-icon-color: -color-border;
+
+}
+
+.menu-button {
+    -fx-background-color: transparent;
+    -fx-border-radius: 250;
+    -fx-border-width: 1;
+    -fx-padding: 2px;
+    -fx-effect: dropshadow(gaussian, -shadow-default, 12, 0, 0, 4);
+    -fx-cursor: hand;
+}
+
+.menu-button:hover {
+    -fx-scale-x: 1.1;
+    -fx-scale-y: 1.1;
 }
